add antd layout

--- a/tsconfig.extend.json
+++ b/tsconfig.extend.json
@@ -4,6 +4,9 @@
         "paths": {
             "@/*": [
                 "./*"
+            ],
+            "@views/*": [
+                "./views/*"
             ]
         }
     }
