--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-loadable": "^5.5.4",
+    "@types/react-router-dom": "^5.1.7",
     "antd": "^4.10.3",
     "craco-alias": "^2.1.1",
     "craco-antd": "^1.19.0",
     "craco-less": "^1.17.1",
+    "mobx": "^6.0.4",
+    "mobx-react": "^7.0.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-loadable": "^5.5.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
