--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
+    "@types/react-custom-scrollbars": "^4.0.7",
     "@types/react-dom": "^16.9.8",
     "@types/react-loadable": "^5.5.4",
     "@types/react-router-dom": "^5.1.7",
@@ -22,6 +23,7 @@
     "mobx": "^6.0.4",
     "mobx-react": "^7.0.5",
     "react": "^17.0.1",
+    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.1",
     "react-loadable": "^5.5.0",
     "react-router-dom": "^5.2.0",
@@ -52,5 +54,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "sass": "^1.32.5"
   }
 }
