--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "^16.9.8",
     "@types/react-loadable": "^5.5.4",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-transition-group": "^4.4.0",
     "antd": "^4.10.3",
     "axios": "^0.21.1",
     "craco-alias": "^2.1.1",
@@ -28,6 +29,7 @@
     "react-loadable": "^5.5.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^4.0.1",
+    "react-transition-group": "^4.4.1",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
