--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/aliyun-theme": "^0.0.4",
     "@craco/craco": "^6.0.0",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -34,7 +35,7 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "nodemon -w ./src/styles/antd.customize.less --exec \"craco start\"",
     "build": "craco build",
     "test": "craco test",
     "eject": "craco eject"
@@ -58,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "nodemon": "^2.0.7",
     "sass": "^1.32.5"
   }
 }
